# block-parliament

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY_FLY.md  Dockerfile  cloudbuild.yaml  eslint.config.ts  fly.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
crates/bp-web/: Cargo.toml  Makefile  Trunk.toml
crates/bp-web/migrations/: 001_metrics_snapshots.sql
crates/bp-web/public/: robots.txt  sitemap.xml
crates/bp-web/src/: app.rs  config.rs  db.rs  ingestion.rs  lib.rs  main.rs  scheduler.rs
crates/bp-web/src/api/: http.rs  jito.rs  mod.rs  sfdp.rs  solana_rpc.rs  stakewiz.rs
crates/bp-web/src/components/: copy_button.rs  external_link.rs  metrics.rs  mod.rs  owl_mark.rs  section.rs
crates/bp-web/src/financials/: categorize.rs  config.rs  db.rs  mod.rs  template.html  timeline.rs  types.rs
crates/bp-web/src/pages/: delegate.rs  home.rs  mod.rs  security.rs
crates/bp-web/style/: main.css  tailwind.css
crates/bp-web/tests/: financials_smoke.rs
crates/validator-accounting/: Cargo.toml  POSITION_TRACKING_PLAN.md  TAX_REPORT.md  config.fly.toml  config.toml.example  test_dummy_data.sh
crates/validator-accounting/src/: addresses.rs  bam.rs  cache.rs  config.rs  constants.rs  doublezero.rs  dune.rs  expenses.rs  html_report.rs  html_report_template.html  jito.rs  leader_fees.rs  main.rs  notion.rs  positions.rs  prices.rs  reports.rs  rpc.rs  tax_report.rs  transactions.rs
public/: manifest.json
scripts/: sync_fly_data.sh
src/: config.rs  jito.rs  main.rs  main.tsx  reports.rs
src/components/: Header.tsx  Metrics.tsx  OwlMark.tsx  Section.tsx
src/lib/: config.ts  jito.ts  solana-rpc.ts  stakewiz.ts
src/routes/: index.tsx
