[package]
name = "bp-web"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "bp-web"
path = "src/main.rs"

[dependencies]
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true

# Server dependencies (SSR feature)
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["compression-gzip", "compression-br"] }
http = { workspace = true, optional = true }

[features]
default = []
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:reqwest",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "leptos/ssr",
]

[package.metadata.leptos]
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
