[package]
name = "validator-accounting"
version.workspace = true
edition.workspace = true
description = "Accounting and financial tracking for Block Parliament Solana validator"

[lints]
workspace = true

[dependencies]
# Solana
solana-client.workspace = true
solana-rpc-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-commitment-config.workspace = true
solana-account-decoder.workspace = true

# SPL tokens (for jitoSOL balance tracking)
spl-associated-token-account.workspace = true
spl-token.workspace = true

# Binary serialization (for stake account parsing)
bincode.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client for price API
reqwest.workspace = true
reqwest_012 = { package = "reqwest", version = "0.12.28" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time handling
chrono.workspace = true

# CSV output
csv.workspace = true

# CLI arguments
clap.workspace = true

# Error handling
anyhow.workspace = true

# Config file parsing
toml.workspace = true

# SQLite with compile-time checked queries
sqlx.workspace = true
